Fixed the height on Safari

--- a/wasm/pyxel.css
+++ b/wasm/pyxel.css
@@ -40,4 +40,5 @@ canvas#canvas {
     top: 0px;
     width: 100vw;
     height: 100vh;
+    height: 100dvh;
 }
